fixed hero/rating bottom gap on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -1145,14 +1145,10 @@ footer {
 
   .hero-text-component, .rating-text-component{
 
-    position: relative;
-
-    width: 40vw;
+    position:absolute;
     z-index: 999;
     padding: 2em;
     padding-top: 0.5em;
-
-    bottom: 50%;
 
     background-color: rgba(5, 5, 5, 0.61);
     
@@ -1320,7 +1316,6 @@ footer {
 
   .hero-text-component, .rating-text-component{
 
-    position: relative;
     padding: 0;
     max-height: 282px;
 
